--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Little Angry Boy</title>
 
     <!-- feuille css -->
-    <link rel="stylesheet" href="script.css"> 
+    <link rel="stylesheet" href="style.css"> 
 
     <!-- font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
