Modif pour la demande du nom

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button id="musique" class="onoff" onclick="onoff(this)"><div>off</div></button>
     <section id="en-tete">
         <h1>Little Angry Boy</h1>
-        <p>Tapes sur Joël pour voir ce qu'il se passe...</p>
+        <h5 id="news"></h5>
     </section>
     <section>
         <div id="affichage" class="affichage">Score : 0</div>
