--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <section id="en-tete">
         <h1>Little Angry Boy</h1>
         <h5 id="news"></h5>
+        <p id="phrase"></p>
     </section>
     <section>
         <div id="affichage" class="affichage">Score : 0</div>
